<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.UserProfileFragment"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:id="@+id/user_page_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".user.UserProfileFragment"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/user_profile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/user_profile_text"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:fontFamily="@font/san_francisco_display_bold"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/user_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            tools:text="mihai_popescu@gmail.com"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/san_francisco_display_regular"
            android:layout_below="@id/user_profile_tv"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" />

        <View
            android:id="@+id/first_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/user_email_tv"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/separator_color"/>

        <TextView
            android:id="@+id/notifications_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/notifications_text"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/san_francisco_display_regular"
            android:layout_below="@id/first_separator"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notifications_tv"
            android:layout_below="@id/first_separator"
            android:layout_marginTop="23dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:layout_toEndOf="@id/notifications_tv" />

        <View
            android:id="@+id/second_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/switch_notifications"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/separator_color"/>

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/location_text"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/san_francisco_display_regular"
            android:layout_below="@id/second_separator"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <Switch
            android:id="@+id/switch_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/location_tv"
            android:layout_below="@id/second_separator"
            android:layout_marginTop="23dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:layout_toEndOf="@id/notifications_tv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pin_iv"
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_below="@+id/location_tv"
            android:background="@drawable/ic_location_pin"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/pin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bucharest, RO"
            android:textColor="@color/inactive_dark_grey_text"
            android:layout_toRightOf="@id/pin_iv"
            android:textSize="14sp"
            android:fontFamily="@font/san_francisco_display_regular"
            android:layout_below="@id/location_tv"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"/>

        <View
            android:id="@+id/third_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pin_tv"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/separator_color"/>

        <TextView
            android:id="@+id/domains_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/domains_text"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/san_francisco_display_regular"
            android:layout_below="@id/third_separator"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>


        <TextView
            android:id="@+id/edit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/domains_tv"
            android:text="@string/edit"
            android:textColor="@color/brandOrange"
            android:layout_below="@id/third_separator"
            android:layout_marginTop="23dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="end"
            android:layout_toEndOf="@id/notifications_tv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/save_user_btn"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:background="@drawable/button_rounded_orange_fill"
                android:text="@string/save"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/san_francisco_display_medium"
                android:layout_below="@id/domains_tv"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/logout_btn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/logout"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textColor="@color/inactive_dark_grey_text"
                android:fontFamily="@font/san_francisco_display_regular"
                android:layout_below="@id/save_user_btn"
                android:layout_marginTop="18dp" />

            <TextView
                android:id="@+id/delete_account_btn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/delete_account"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textColor="@color/inactive_light_grey_text"
                android:fontFamily="@font/san_francisco_display_regular"
                android:layout_below="@id/logout_btn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </RelativeLayout>
    <ProgressBar
        android:id="@+id/user_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>
    <TextView
        android:id="@+id/user_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="A intervenit o eroare. Te rugam sa incerci mai tarziu."
        android:visibility="gone"
        tools:visibility="visible"/>
</FrameLayout>
